--- a/index.html
+++ b/index.html
@@ -286,7 +286,6 @@
                     </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
         </div>
@@ -424,7 +423,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
@@ -472,7 +471,7 @@
                             <i class="fa fa-inbox" aria-hidden="true"></i> P.O.Box 5599 Dammam, 31432<br/>
                             <i class="fa fa-phone" aria-hidden="true"></i> Phone: 013/8085186 <br/>
                             <i class="fa fa-fax" aria-hidden="true"></i> Fax: 013/8271668<br/>
-                        <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:email@bakodah.sa" class="link" style="color:#fff"> email@bakodah.sa</a></div>
+                        <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:baker@alhadrami.xyz" class="link" style="color:#fff"> baker@alhadrami.xyz</a></div>
                     </p>
             </div>
             <div class="col-md-4">
