editing email form

--- a/ar/index.html
+++ b/ar/index.html
@@ -486,7 +486,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 pull-left">
-                    <span class="copyright">Copyright &copy; bakodah.sa <script>document.write(new Date().getFullYear())</script></span>
+                    <span class="copyright">Copyright &copy; bakodah.com.sa <script>document.write(new Date().getFullYear())</script></span>
                 </div>
             </div>
         </div>
