--- a/ar/index.html
+++ b/ar/index.html
@@ -419,19 +419,19 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form action="https://formspree.io/baker@alhadrami.xyz" method="POST" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6" style="float:right">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="إسمك * " id="name" required data-validation-required-message="فضلاً زودنا بإسمك">
+                                    <input type="text" name="name" class="form-control" placeholder="إسمك * " id="name" required data-validation-required-message="فضلاً زودنا بإسمك">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="بريدك الإلكتروني *" id="email" required data-validation-required-message="فضلاً ضع عنوان بريدك الإلكتروني">
+                                    <input type="email" name="_replyto" class="form-control" placeholder="بريدك الإلكتروني *" id="email" required data-validation-required-message="فضلاً ضع عنوان بريدك الإلكتروني">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="رقم هاتفك *" id="phone" required data-validation-required-message="فضلاً ضع رقم هاتفك">
+                                    <input type="tel" name="phone" class="form-control" placeholder="رقم هاتفك *" id="phone" required data-validation-required-message="فضلاً ضع رقم هاتفك">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -444,9 +444,12 @@
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">أرسل <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+                                <button type="submit" value="Send" class="btn btn-xl">أرسل <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
+                        <input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="_format" value="plain" />
                     </form>
                 </div>
             </div>
@@ -662,8 +665,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/jqBootstrapValidation.js"></script> -->
+    <!-- <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
