--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="https://formspree.io/baker@alhadrami.xyz" method="POST"name="sentMessage" id="contactForm" novalidate>
+                    <form action="https://formspree.io/baker@alhadrami.xyz" method="POST" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -456,6 +456,9 @@
                                 <button type="submit" value="Send" class="btn btn-xl">Send <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                             </div>
                         </div>
+                        <input type="hidden" name="_subject" value="From bakodah.com.sa: new message!">
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="_format" value="plain" />
                     </form>
                 </div>
             </div>
@@ -674,7 +677,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
+    <!-- <script src="js/jqBootstrapValidation.js"></script> -->
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
