--- a/ar/index.html
+++ b/ar/index.html
@@ -306,7 +306,7 @@
                                     <h4>نبذة تاريخية</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للإستشارات المالية في المملكة العربية السعودية في عام 1423هـ بموجب السجل التجاري رقم 961 واتبع سياسات متميزة لخدمة عملائه وبتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
+                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة جدة بالمملكة العربية السعودية في عام 2002م وحصل على سجل تجاري رقم 040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
                                 </div>
                             </div>
                         </li>
@@ -465,7 +465,7 @@
                                 <i class="fa fa-inbox" aria-hidden="true"></i> ص. ب 5599 الدمام 31432 <br/>
                                 <i class="fa fa-phone" aria-hidden="true"></i> هاتف 013/8085186 <br/>
                                 <i class="fa fa-fax" aria-hidden="true"></i> فاكس 013/8271668<br/>
-                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:email@bakodah.sa" class="link" style="color:#fff"> email@bakodah.sa</a></div>
+                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff"> abdullah@bakodah.com.sa</a></div>
                         </p>
                 </div>
                 <div class="col-md-4">
@@ -479,7 +479,7 @@
                             <i class="fa fa-inbox" aria-hidden="true"></i> ص. ب 1141 جدة 21424 <br/>
                             <i class="fa fa-phone" aria-hidden="true"></i> هاتف 012/6828180 <br/>
                             <i class="fa fa-fax" aria-hidden="true"></i> فاكس 012/6828180<br/>
-                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:email@bakodah.sa" class="link" style="color:#fff"> email@bakodah.sa</a></div>
+                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff"> abdullah@bakodah.com.sa</a></div>
                         </p>
                 </div>
             </div>
