--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Internal Audit</h4>
-                        <p class="text-muted">A lot of companies are in favor of hiring professional firms to conduct their internal auditing. So, a whole qualified department was established to provide internal audit services to our clients that focuses on raising the efficiency and effectiveness of their performance and credibility and reliability of financial reports and make sure to follow the laws and regulations followed by the company. We have provided this service for many of our major clients.</p>
+                        <p class="text-muted">A lot of companies are in favor of hiring professional firms to professionally audit on their behalf. So, a whole qualified department was established to provide internal audit services to our clients that focuses on raising the efficiency and effectiveness of their performance and credibility and reliability of financial reports and to make sure to follow the laws and regulations followed by the company. We have provided this service for many of our major clients.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -112,7 +112,7 @@
                             <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Financial and Administrative Systems</h4>
-                        <p class="text-muted">Establishing and developing financial and administrative systems based on an organized study that fits their activity of client activity and then propose the best appropriate systems for the client, also provide services for the development of the controls of the computer systems for clients based on a detailed study of the needs of the client and then providing solutions and ideas appropriate for the development of the client and his business, also offering assessment services for financial systems, administrative and addressing any deficiencies.</p>
+                        <p class="text-muted">Establishing and developing financial and administrative systems based on an organized study that fits their activity and then propose the best appropriate systems for the client, also provide services for the development of the controls of the computer systems for clients based on a detailed study of the needs of the client and then providing solutions and ideas appropriate for the development of the client and his business, in addition to that, we offer assessment services for financial systems, administrative and addressing any deficiencies.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -120,7 +120,7 @@
                             <i class="fa fa-binoculars fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Business Valuation</h4>
-                        <p class="text-muted">The assessments of companies are increasing in the developed business environment, which resulted from several reasons, including merging with other companies and changing the structure the family businesses especially entry and exit of partners. All of these processes require evaluations based on companies estimated retail price of the market price using evaluation methods which brings importance and value of the services provided by our experience team to choose the most appropriate evaluation method.</p>
+                        <p class="text-muted">The assessments of companies are increasing in the developed business environment, which resulted from several reasons, including merging with other companies and changing the structure the family businesses operate in especially entry and exit of partners. All of these processes require evaluations based on companies estimated market value using evaluation methods which brings importance and value of the services provided by our professional team to choose the most appropriate evaluation method.</p>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -129,8 +129,8 @@
                                         <i class="fa fa-square fa-stack-2x text-primary"></i>
                                         <i class="fa fa-hourglass-half fa-stack-1x fa-inverse"></i>
                                     </span>
-                                    <h4 class="service-heading">Feasibility Study</h4>
-                                    <p class="text-muted">The supervision of the development of the feasibility studies for potential projects upon which decisions by the management can be made. It is worth to mention that the governmental interest in small and medium entities in addition to the need for the facilities to finance options have increased the market of feasibility studies.</p>
+                                    <h4 class="service-heading">Feasibility Studies</h4>
+                                    <p class="text-muted">The supervision of the development of the feasibility studies for potential projects upon which decisions by the management can be made. It is worth to mention that the governmental interest in small and medium entities in addition to the need for the facilities to finance the operations have increased the market of feasibility studies.</p>
                                 </div>
                                 
                                 <div class="col-md-4">
@@ -158,7 +158,7 @@
                             <i class="fa fa-recycle fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Change the Corporate Entity</h4>
-                        <p class="text-muted">Changing the structure of companies has become a very common trend, especially the family businesses, that changes from a limited liability companies into a closed joint stock companies, this change requires financial, administrative and legal actions. Abdullah Bakodah and Adel Aboulkhair was the first company that pioneered in this area, which includes, the establishment of new companies as it is considered to be related to this activity.</p>
+                        <p class="text-muted">Changing the structure of companies has become a very common trend, especially the family businesses, that changes from a limited liability companies into a closed joint stock companies, this change requires financial, administrative and legal actions. Our company was one of the first companies that pioneered in this area, which includes, the establishment of new companies as it is considered to be related to this activity.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -174,7 +174,7 @@
                             <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Value Added Tax (VAT)</h4>
-                        <p class="text-muted">VAT is multi point sales tax with set of tax paid on purchase. Currently there is no VAT in Saudi Arabia, however it is expected to be introduced in the near future, and our team started to prepare for this big change, and have gained knowledge about this tax in similar countries by taking the experience of our global network. Our office will be ready to offer this kind of service when its approved and applied.</p>
+                        <p class="text-muted">VAT is multi point sales tax to be paid on purchase. Currently there is no VAT in Saudi Arabia, however it is expected to be introduced in the near future, and our team started to prepare for this big change, and have gained knowledge about this tax in similar countries by taking the experience of our global network. Our office will be ready to offer this kind of service when its approved and applied.</p>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -210,7 +210,7 @@
                             <i class="fa fa-gavel fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Corporate Governance</h4>
-                        <p class="text-muted">Provide a unique service that help companies to implement corporate governance and identify irregularities and work to provide advice for companies to address these violations and to work on the application of fully governance, as the government new corporate had enforced shareholding companies to declare, in the Board of Directors report all the items that their company did not abide and the reasons for non-compliance.</p>
+                        <p class="text-muted">Provide a unique service that help companies to implement corporate governance and identify irregularities and work to provide advice for companies to address these violations and to work towards achieving full governance, as the government new laws had enforced shareholding companies to declare, in the Board of Directors report all the items that their company did not abide and the reasons for non-compliance.</p>
                     </div>
                 </div>
             </div>
@@ -311,7 +311,7 @@
                                     <h4>Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Jeddah, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 961). The bureau follows exceptional policies in serving its clients and offers diverse, professional services provided by long and widely experienced professionals.</p>
+                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Jeddah, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
                                 </div>
                             </div>
                         </li>
@@ -350,12 +350,12 @@
                                     <h4>Goals</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted" >1. Identify and analyze strength and weaknesses and the opportunities for potential risks. In addition, we provide the financial management of the company with our observations on any matters
+                                    <p class="text-muted" >1. Identify and analyze strength and weaknesses and the opportunities for potential risks. In addition, we provide the financial management of the company with our observations on any matters.
                                         <br>2. To help our clients achieve their goals and overcome any difficulties they may face.
                                         <br>3. Maintaining a high efficiency, accuracy and integrity of our team through training courses and workshops.
                                         <br>4. Adopt a policy by which clients are our partners in success, their success is our success.
                                         <br>5. Continuous development of our work performance to provide continuous advisory to our clients to improve their development too.                                        
-                                        <br>6. Communicate with professional associations and worldwide organizations to stay up-to-date with the era’s changes in our professional field.
+                                        <br>6. Communicate with professional associations and worldwide organizations to stay up-to-date with the changes in our professional field. 
                                     </p>
                                 </div>
                             </div>
@@ -474,7 +474,7 @@
                                 <i class="fa fa-inbox" aria-hidden="true"></i> P.O.Box 5599 Dammam, 31432<br/>
                                 <i class="fa fa-phone" aria-hidden="true"></i> Phone: 013/8085186 <br/>
                                 <i class="fa fa-fax" aria-hidden="true"></i> Fax: 013/8271668<br/>
-                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:baker@alhadrami.xyz" class="link" style="color:#fff"> baker@alhadrami.xyz</a></div>
+                            <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff">abdullah@bakodah.com.sa</a></div>
                         </p>
             </div>
             <div class="col-md-4">
@@ -488,7 +488,7 @@
                     <i class="fa fa-inbox" aria-hidden="true"></i> P.O.Box 1141 Jeddah 21424<br/>
                     <i class="fa fa-phone" aria-hidden="true"></i> Phone: 012/6828180<br/>
                     <i class="fa fa-fax" aria-hidden="true"></i> Fax: 012/6828180<br/>
-                    <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:email@bakodah.sa" class="link" style="color:#fff"> email@bakodah.sa</a></div>
+                    <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff">abdullah@bakodah.com.sa</a></div>
                 </p>
             </div>
         </div>
