--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Internal Audit</h4>
-                        <p class="text-muted">A lot of companies are in favor of hiring professional firms to professionally audit on their behalf. So, a whole qualified department was established to provide internal audit services to our clients that focuses on raising the efficiency and effectiveness of their performance and credibility and reliability of financial reports and to make sure to follow the laws and regulations followed by the company. We have provided this service for many of our major clients.</p>
+                        <p class="text-muted">A lot of companies are in favor of hiring professional firms to perform professional auditing on their behalf. So, a whole qualified department was established to provide internal audit services to our clients that focuses on raising the efficiency and effectiveness of their performance and credibility and reliability of financial reports and to make sure to follow the laws and regulations followed by the company. We have provided this service for many of our major clients.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -112,7 +112,7 @@
                             <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Financial and Administrative Systems</h4>
-                        <p class="text-muted">Establishing and developing financial and administrative systems based on an organized study that fits their activity and then propose the best appropriate systems for the client, also provide services for the development of the controls of the computer systems for clients based on a detailed study of the needs of the client and then providing solutions and ideas appropriate for the development of the client and his business, in addition to that, we offer assessment services for financial systems, administrative and addressing any deficiencies.</p>
+                        <p class="text-muted">Establishing and developing financial and administrative systems based on an organized study that fits their activity and then propose the best appropriate systems for the client, also provide services for the development of the controls of the computer systems for clients based on a detailed study of the needs of the client and then providing solutions and ideas appropriate for the development of the clients, in addition to that, we offer assessment services for financial systems, administrative and addressing any deficiencies.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -174,7 +174,7 @@
                             <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="service-heading">Value Added Tax (VAT)</h4>
-                        <p class="text-muted">VAT is multi point sales tax to be paid on purchase. Currently there is no VAT in Saudi Arabia, however it is expected to be introduced in the near future, and our team started to prepare for this big change, and have gained knowledge about this tax in similar countries by taking the experience of our global network. Our office will be ready to offer this kind of service when its approved and applied.</p>
+                        <p class="text-muted">VAT is a sales tax to be paid on purchase. Currently there is no VAT in Saudi Arabia, however it is expected to be implemented in January 2018, and our team started to prepare for this big change, and have gained knowledge about this tax in similar countries by taking the experience of our global network. Our office will be ready to offer this kind of service when its approved and applied.</p>
                     </div>
                 </div>
                 <div class="row text-center">
