--- a/ar/index.html
+++ b/ar/index.html
@@ -132,7 +132,7 @@
                         <i class="fa fa-hourglass-half fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">دراسة الجدوى الإقتصادية</h4>
-                    <p class="text-muted">القيام بالإشراف على إعداد دراسات الجدوى الإقتصادية للمشاريع تحت التأسيس بالطرق الميدانية والأساليب العلمية بحيث تكون الدراسة الدليل الواضح لصاحب العمل في إتخاذ القرار السليم. كما أن إهتمام الدولة بالمنشآت المتوسطة والصغيرة بالإضافة إلى إحتياج هذه المنشآت إلى التمويل فتح سوق واسعة لعمليات دراسات الجدوى الإقتصادية.</p>
+                    <p class="text-muted">القيام بالإشراف على إعداد دراسات الجدوى الإقتصادية للمشاريع تحت التأسيس بالطرق الميدانية والأساليب العلمية بحيث تكون الدراسة الدليل الواضح لصاحب العمل في إتخاذ القرار السليم. كما أن إهتمام الدولة بالمنشآت المتوسطة والصغيرة بالإضافة إلى إحتياج هذه المنشآت إلى التمويل لفتح سوق واسعة لعمليات دراسات الجدوى الإقتصادية.</p>
                 </div>
                 
                 <div class="col-md-4">
@@ -149,7 +149,7 @@
                         <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">وضع الخطط الإستراتيجية وتقييم الأداء</h4>
-                    <p class="text-muted">يتم إعداد الخطط الإستراتيجية طويلة المدى وقصيرة المدى التي تناسب المنشآت وتتماشى مع طبيعة نشاطها وتحقق لها الأهداف المطلوبة والمحددة سلفاً من قبل مجالس إدارتها كما يتم تقييم هذه الخطط خال مراحل التنفيذ وتحديد أسباب الانحرافات والعمل على معالجتها كما يتم تقييم أداء العاملين وإيضاح طرق رفع كفاءتهم الإنتاجية.</p>
+                    <p class="text-muted">يتم إعداد الخطط الإستراتيجية طويلة المدى وقصيرة المدى التي تناسب المنشآت وتتماشى مع طبيعة نشاطها وتحقق لها الأهداف المطلوبة والمحددة سلفاً من قبل مجالس إدارتها كما يتم تقييم هذه الخطط خلال مراحل التنفيذ وتحديد أسباب الانحرافات والعمل على معالجتها كما يتم تقييم أداء العاملين وإيضاح طرق رفع كفاءتهم الإنتاجية.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -175,7 +175,7 @@
                         <i class="fa fa-percent fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">الضريبة المضافة</h4>
-                    <p class="text-muted">وهي الضريبة التي تفرض على المبيعات أو الإستهلاك النهائي للسلعة وهي تضاف على سوق السلعة. وسيتم طرحها في المملكة العربية السعودية في القريب العاجل وأن فريق عملنا بدأ للتجهيز لهذا العمل ليخدم عملائه على أحسن وجه مستفيداً من خبرة موظفينا وشراكتنا العالمية ومعرفتهم بهذا النوع من الضرائب وخاصة بالدول الشقيقة وسيصبح مكتبنا جاهز لتقديم هذا النوع من الخدمات عندما يتم إقرارها وتطبيقها.</p>
+                    <p class="text-muted">وهي الضريبة التي تفرض على المبيعات أو الإستهلاك النهائي للسلعة وهي تضاف على سوق السلعة. وسيتم طرحها في المملكة العربية السعودية إبتداءً من 1 يناير 2018 وإن فريق عملنا بدأ للتجهيز لهذا العمل ليخدم عملائه على أحسن وجه مستفيداً من خبرة موظفينا وشراكتنا العالمية ومعرفتهم بهذا النوع من الضرائب وخاصة بالدول الشقيقة وإن مكتبنا جاهز لتقديم هذا النوع من الخدمات عندما يتم إقرارها وتطبيقها.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -201,7 +201,7 @@
                         <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">تقديم الحلول المالية</h4>
-                    <p class="text-muted">تقديم الإستشارات المالية في مجال الإدارة المالية لصغار العماء الذين لا تتيح لهم إمكانياتهم إستخدام مدراء ماليين وذلك لتحسين الماءة المالية تجاه الممولين والموردين.</p>
+                    <p class="text-muted">تقديم الإستشارات المالية في مجال الإدارة المالية لصغار العملاء الذين لا تتيح لهم إمكانياتهم إستخدام مدراء ماليين وذلك لتحسين الملاءة المالية تجاه الممولين والموردين.</p>
                 </div>
             </div>
             <div class="row text-center">
@@ -290,7 +290,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">من نحن</h2>
+                    <h2 class="section-heading">عن الشركة</h2>
                     <h3 class="section-subheading text-muted">التعريف، الرؤية، الأهداف</h3>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                                     <h4>نبذة تاريخية</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة جدة بالمملكة العربية السعودية في عام 2002م وحصل على سجل تجاري رقم 040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
+                                    <p class="text-muted">تأسس مكتب عبدالله باكودح للاستشارات المالية في مدينة الدمام بالمملكة العربية السعودية عام 2002م وحصل على سجل تجاري رقم 040961 واتبع سياسات متميزة لخدمة عملائه وامتاز بتنوع الخدمات التي يقدمها وبمهنية عالية جداً وأشخاص ذو خبرات طويلة.</p>
                                 </div>
                             </div>
                         </li>
@@ -364,7 +364,7 @@
                                     <h4>المكاتب المحلية</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted" >تقع مكاتب الشركة في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين بدعم العضو العالمي مجموعة جنيف للإستشارات.</p>
+                                    <p class="text-muted" >تقع مكاتب الشركة في كل من مدينة الدمام ومدينة جدة ويقوم على إدارة هذه المكاتب خبراء مهنيون على مستوى عالٍ جداً من الخبرة العلمية والعملية ويتمتعون بمستوى عالٍ من الكفاءة والأمانة والنزاهة والدقة في العمل بدعم عدد كبير من الخبراء الأوروبيين وعلى الأخص السويسريين من العضو العالمي مجموعة جنيف للإستشارات.</p>
                                 </div>
                             </div>
                         </li>
@@ -393,12 +393,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                         <h4 class="service-heading" >مجموعة جنيف الإستشارية</h4>
-                        <p class="text-muted">مكتب عبدالله باكودح للإستشارات المالية عضو مستقل في مجموعة جنيف للإستشارات المالية
-                            <br>وهي أحد أكبر بيوت الخبرة السويسرية في الإستشارات المالية ويتم عمل إجتماع سنوي بحضور
+                        <p class="text-muted">مكتب عبدالله باكودح للإستشارات المالية عضو مستقل في مجموعة جنيف للإستشارات
+                            <br>وهي أحد أكبر بيوت الخبرة السويسرية في الإستشارات ويتم عمل إجتماع سنوي بحضور
                             <br>جميع الأعضاء في هذه المجموعة ويعقد في أحد المدن الأوروبية
                             <br>
                             <br>
-                            <br</p>
+                            <br></p>
                 </div>
             </div>
             <div class="row">
@@ -474,11 +474,10 @@
                             <br/>
                             جدة</h4>
                         <p style="color:#fff">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i> شارع صاري <br/>
-                            حي السلامة <br/>
-                            <i class="fa fa-inbox" aria-hidden="true"></i> ص. ب 1141 جدة 21424 <br/>
-                            <i class="fa fa-phone" aria-hidden="true"></i> هاتف 012/6828180 <br/>
-                            <i class="fa fa-fax" aria-hidden="true"></i> فاكس 012/6828180<br/>
+                                <i class="fa fa-map-marker" aria-hidden="true"></i> طريق المدينة النازل، بعد شارع قريش <br/>
+                                حي السلامة، قصر الأعمال <br/>
+                            <i class="fa fa-inbox" aria-hidden="true"></i> ص. ب 48541 جدة 21582 <br/>
+                            <i class="fa fa-phone" aria-hidden="true"></i> هاتف 012/6397727 <br/>
                             <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff"> abdullah@bakodah.com.sa</a></div>
                         </p>
                 </div>
@@ -515,22 +514,23 @@
                                 <p style="text-align:right"><strong>الجنسية:</strong>
                                 <br>سعودي
                                 <br><strong>التحصيل العلمي:</strong>
-                                <br>- شهادة البكالوريوس في تخصص المحاسبة – جامعة الملك عبدالعزيز بجدة عام 1981م
+                                <br>- شهادة البكالوريوس في تخصص المحاسبة – جامعة الملك عبدالعزيز بجدة عام 1981م.
                                 <br><strong>التأهيل المهني:</strong>
-                                <br>- عضو الهيئة السعودية للمحاسبين القانونيين محاسب قانوني يحمل ترخيص رقم 450.
-                                <br>- عضو هيئة المحاسبة والمراجعة لدول مجلس التعاون لدول الخليج العربية بعضوية رقم 331.
+                                <br>- مستشار وخبير مالي ترخيص رقم 11973.
+                                <br>- محاسب قانوني معتمد ترخيص رقم 450.
+                                <br>- عضو هيئة المحاسبة والمراجعة لدول مجلس التعاون لدول الخليج العربية.
                                 <br>- رئيس لجنة المحاسبين القانونيين بالغرفة التجارية بمدينة جدة سابقاً وعضو بها حالياً.
-                                <br>- عضو جمعية المراجعة الداخلية عضوية رقم 635.
+                                <br>- عضو جمعية المراجعة الداخلية.
                                 <br>- عضو الجمعية السعودية للمحاسبين (SAA).
                                 <br>- عضو الجمعية المحاسبية الإدارية الدولية (IMA).
-                                <br>- مستشار مالي ترخيص رقم 11973.
                                 <br><strong>الخبرات العملية:</strong>
                                 <br>- عمل لدى شركة برايس وترهاوس العالمية وهي أحدى أكبر أربع شركات مهنية عالمية كما أنها الشركة التي تقوم بمراجعة حسابات شركة أرامكو السعودية وقد عمل في هذه الشركة من عام 1982 م حتى 1987 م وقد تدرج في العمل لدى هذه الشركة حتى مرتبة مدقق رئيسي وقد شارك في فريق العمل الذي يقوم بمراجعة حسابات شركة أرامكو السعودية.
                                 <br>- عمل مدير إدارة الخزينة في الشركة السعودية الموحدة للكهرباء بالمنطقة الغربية.
-                                <br>- محلل مالي أول في شركة أرامكو السعودية في إدارة أساليب ونظم المحاسبة.
+                                <br>- محلل مالي أول في شركة أرامكو السعودية في إدارة الخزينة ثم إدارة أساليب ونظم المحاسبة.
                                 <br>- محلل حسابات ركن في إدارة الحسابات بشركة أرامكو السعودية.
                                 <br>- الشريك في شركة سمير الاموي وعبدالله باكودح.
-                                <br>- الشريك في شركة عبدالله باكودح وعادل ابوالخير.</p>
+                                <br>- الشريك في شركة عبدالله باكودح وعادل ابوالخير.
+                                <br>- مستشار وخبير مالي في مكتب عبدالله باكودح للإستشارات المالية لغير الأوراق المالية.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal">أغلق السيرة الذاتية <i class="fa fa-times"></i></button>
                             </div>
                         </div>
@@ -569,7 +569,8 @@
                                 <br>- عمل كمحلل مالي في مجموعة مناس الدولية بالولايات المتحدة الامريكية.
                                 <br>- عمل كمحلل مالي في شركة هيومين للعناية الصحية بالولايات المتحدة الامريكية.
                                 <br>- عمل كمحلل ائتمان في شركة شمال أميركا مور قيجكو مبني.
-                                <br>- مدير مراجعة بشركة عبدالله باكودح وعادل ابو الخير (محاسبون ومراجعون قانونيون).</p>
+                                <br>- مدير مراجعة بشركة عبدالله باكودح وعادل ابو الخير (محاسبون ومراجعون قانونيون).
+                                <br>- خبير ومستشار مالي في مكتب عبدالله باكودح للإستشارات المالية لغير الأوراق المالية.</p>
 
                                 <button type="button" class="btn btn-primary" data-dismiss="modal">أغلق السيرة الذاتية <i class="fa fa-times"></i></button>
                             </div>
@@ -606,10 +607,10 @@
                                 <br><strong>الخبرات العملية:</strong>
                                 <br>- محاسب قانوني مرخص بجمهورية مصر العربية
                                 <br>- مدير مالي وإداري للعديد من الشركات
-                                <br>- مساعد مدير في شركة الدكتور محمد العمري وشركاه (محاسبون قانونيون)
+                                <br>- مدير مراجعة أعلى في شركة الدكتور محمد العمري وشركاه (محاسبون قانونيون)
                                 <br>- مدير مالي مجموعة شركات محمد منصور البسامي للمقاولات
-                                <br>- مستشار مالي متعاقد عامة وخاصة (رئاسة الحرمين، غرفة مكة المكرمة، معهد البحوث والدراسات بجامعة أم القرى)
-                                <br>- خبير استشارات مالية مكتب عبدالله باكودح للاستشارات المالية</p>
+                                <br>- مستشار مالي متعاقد للجهات التالية (رئاسة الحرمين، غرفة مكة المكرمة، معهد البحوث والدراسات بجامعة أم القرى)
+                                <br>- خبير استشارات مالية في مكتب عبدالله باكودح للاستشارات المالية لغير الأوراق المالية </p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal">أغلق السيرة الذاتية <i class="fa fa-times"></i></button>
                             </div>
                         </div>
