--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                     <h4>Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Jeddah, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
+                                    <p class="text-muted">Abdullah Bakodah Financial Advisory Bureau was established in Dammam, Saudi Arabia in 2002, by Mr. Abdullah Bakodah (commercial register No. 040961). The bureau follows exceptional policies in serving its clients and offers diverse professional services provided by long and widely experienced professionals.</p>
                                 </div>
                             </div>
                         </li>
@@ -483,11 +483,10 @@
                     <br/>
                     Jeddah</h4>
                 <p style="color:#fff">
-                        <i class="fa fa-map-marker" aria-hidden="true"></i> Sari St. <br/>
-                    Al-Salama dist. <br/>
-                    <i class="fa fa-inbox" aria-hidden="true"></i> P.O.Box 1141 Jeddah 21424<br/>
-                    <i class="fa fa-phone" aria-hidden="true"></i> Phone: 012/6828180<br/>
-                    <i class="fa fa-fax" aria-hidden="true"></i> Fax: 012/6828180<br/>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> Madinah Rd. Near Quraish St. <br/>
+                        Al-Salama dist. Qasr Al-aamal building. <br/>
+                    <i class="fa fa-inbox" aria-hidden="true"></i> P.O.Box 48541 Jeddah 21582<br/>
+                    <i class="fa fa-phone" aria-hidden="true"></i> Phone: 012/6397727<br/>
                     <div style="color:#fff"><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:abdullah@bakodah.com.sa" class="link" style="color:#fff"> abdullah@bakodah.com.sa</a></div>
                 </p>
             </div>
@@ -538,10 +537,9 @@
                                     <br>- Worked as a manager of Treasury Department in Saudi Consolidated Electricity Company in the western Region.
                                     <br>- Worked as a senior financial analyst in Treasury Department and in Accounting Policy and System Department in Saudi Aramco Company in Dhahran for more than 17 years.
                                     <br>- Work as on accounting staff specialist in accounting Department in Saudi Aramco Company in Dhahran for more than 3 years.
-                                    <br>- Partner at Samir Al-Amawi and Abdullah Bakodah.
-                                    <br>- Partner at Abdullah Bakodah & Adel Aboulkhair Certified Public Accountants Company.
-                                    <br>- Partner in Al Amawi & Bakodah Certified Public Accountants.
-                                    <br>- Partner in Bakodah & Aboulkhair Certified Public Accountants.</p>
+                                    <br>- Partner at Al Amawi & Bakodah Certified Public Accountants.
+                                    <br>- Partner at Bakodah & Aboulkhair Certified Public Accountants.
+                                    <br>- Financial Advisor and Expert at Abdullah Bakodah Financial Advisory for non-securities.</p>
                                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="fa fa-times"></i></button>
                                 </div>
                             </div>
@@ -580,7 +578,8 @@
                                         <br>- Financial analyst of Manas Group.
                                         <br>- Financial analyst of Human health care in USA
                                         <br>- Credit Analyst of Morgan Company in North of America.
-                                        <br>- Audit Manager of Bakodah & AboulKhair CPA Accounting & Auditing Firm.</p>
+                                        <br>- Audit Manager of Bakodah & AboulKhair CPA Accounting & Auditing Firm.
+                                        <br>- Financial Advisor and Expert at Abdullah Bakodah Financial Advisory for non-securities.</p>
                                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="fa fa-times"></i></button>
                                     </div>
                             </div>
@@ -618,9 +617,10 @@
                                     <br>- Financial Consulting Expert at Abdullah Bakodah Financial Consulting Office.
                                     <br>- Financial Advisor to the public and private entities (Presidency of the Two Holy Mosques, Mecca Chamber, Institute of Research and Studies, Umm Al-Qura University
                                     <br>- Financial Manager Mohammed Mansour Al Bassami Contracting Group.
-                                    <br>- Assistant Director of Dr. Mohammed Al Amari & Co. (Chartered Accountants).
+                                    <br>- Sr. Audit Director of Dr. Mohammed Al Amari & Co. (Chartered Accountants).
                                     <br>- Financial and administrative director of many companies.
-                                    <br>- Certified Public Accountant in the Arab Republic of Egypt.</p>
+                                    <br>- Certified Public Accountant in the Arab Republic of Egypt.
+                                    <br>- Financial Advisor and Expert at Abdullah Bakodah Financial Advisory for non-securities.</p>
                                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="fa fa-times"></i></button>
                                 </div>
                             </div>
@@ -658,7 +658,8 @@
                                 <br>- Senior Auditor at Bodi and Al Omar Company for seven years.
                                 <br>- Financial Supervisor at Saipem International Company for three years.
                                 <br>- Financial Manager at Abdullah Al-Qahtani Trading and Contracting Company for nine years.
-                                <br>- Audit Manager at Abdullah Bakodah & Adel Aboulkheir CPA’s since 2013.</p>
+                                <br>- Audit Manager at Abdullah Bakodah & Adel Aboulkheir CPA’s since 2013.
+                                <br>- Financial Advisor and Expert at Abdullah Bakodah Financial Advisory for non-securities.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="fa fa-times"></i></button>
                             </div>
                         </div>
