fixed job titles

--- a/ar/index.html
+++ b/ar/index.html
@@ -230,7 +230,7 @@
                         <div class="team-member">
                             <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                             <h4>عبدالله عمر باكودح</h4>
-                            <p class="text-muted">مستشار ومدير تنفيذي
+                            <p class="text-muted">مستشار مالي
                                 <br>
                                 <br> السيرة الذاتية
                             </p>
@@ -258,7 +258,7 @@
                         <div class="team-member">
                             <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
                             <h4>محمود السيد برمة</h4>
-                            <p class="text-muted">مدير تنفيذي
+                            <p class="text-muted">خبير استشارات مالية
                                 <br>
                                 <br> السيرة الذاتية
                             </p>
@@ -272,7 +272,7 @@
                             <div class="team-member">
                                 <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
                                 <h4>محمود احمد علي</h4>
-                                <p class="text-muted">مدير تنفيذي
+                                <p class="text-muted">مدير مراجعة
                                     <br>
                                     <br> السيرة الذاتية
                                 </p>
@@ -510,7 +510,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2 class="section-heading">عبدالله عمر باكودح</h2>
-                                <p class="section-subheading">مستشار ومدير تنفيذي</p>
+                                <p class="section-subheading">مستشار مالي</p>
                                 <p style="text-align:right"><strong>الجنسية:</strong>
                                 <br>سعودي
                                 <br><strong>التحصيل العلمي:</strong>
@@ -596,7 +596,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2 class="section-heading">محمود السيد البرمة</h2>
-                                <p class="section-subheading">مدير تنفيذي</p>
+                                <p class="section-subheading">خبير استشارات مالية</p>
                                 <p style="text-align:right"><strong>الجنسية:</strong>
                                 <br>مصري
                                 <br><strong>التحصيل العلمي:</strong>
@@ -635,7 +635,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here -->
                                     <h2 class="section-heading">محمود احمد علي</h2>
-                                    <p class="section-subheading">مدير تنفيذي</p>
+                                    <p class="section-subheading">مدير مراجعة</p>
                                     <p style="text-align:right"><strong>الجنسية:</strong>
                                     <br>مصري
                                     <br><strong>التحصيل العلمي:</strong>
@@ -647,7 +647,8 @@
                                     <br>- مدقق رئيسي في شركة بودي والعمر لمدة سبع سنوات.
                                     <br>- مراقب مالي شركة سيبام الدولية لمدة ثلاث سنوات.
                                     <br>- مدير مالي شركة عبدالله القحطاني للتجارة والمقاولات لمدة تسع سنوات.
-                                    <br>- مدير مراجعة في شركة عبدالله باكودح وعادل أبوالخير منذ عام 2013 م.</p>
+                                    <br>- مدير مراجعة في شركة عبدالله باكودح وعادل أبوالخير منذ عام 2013م.
+                                    <br>- خبير استشارات مالية في مكتب عبدالله باكودح للاستشارات المالية لغير الأوراق المالية.</p>
                                     <button type="button" class="btn btn-primary" data-dismiss="modal">أغلق السيرة الذاتية <i class="fa fa-times"></i></button>
                                 </div>
                             </div>
