--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                         <h4>Abdullah Omar Bakodah</h4>
-                        <p class="text-muted">Consultant/Executive Director
+                        <p class="text-muted">Financial Advisor
                             <br>
                             <br> Résumé
                         </p>
@@ -258,7 +258,7 @@
                             <div class="team-member">
                                 <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
                                 <h4>Mahmoud EL-Sayed EL-Borma</h4>
-                                <p class="text-muted">Executive Director
+                                <p class="text-muted">Financial Specialist
                                     <br>
                                     <br> Résumé
                                 </p>
@@ -273,7 +273,7 @@
                             <div class="team-member">
                                 <img src="img/team/4.jpg" class="img-responsive img-circle" alt="">
                                 <h4>Mahmoud Ahmed Ali</h4>
-                                <p class="text-muted">Executive Director
+                                <p class="text-muted">Audit Manager
                                     <br>
                                     <br> Résumé
                                 </p>
@@ -519,7 +519,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here -->
                                     <h2 class="section-heading">Abdullah Omar Bakodah</h2>
-                                    <p class="section-subheading">Consultant/Executive Director</p>
+                                    <p class="section-subheading">Financial Advisor</p>
                                     <p style="text-align:left"><strong>Nationality:</strong>
                                     <br>Saudi
                                     <br><strong>Education:</strong>
@@ -605,7 +605,7 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here -->
                                     <h2 class="section-heading">Mahmoud EL-Sayed EL-Borma</h2>
-                                    <p class="section-subheading">Executive Director</p>
+                                    <p class="section-subheading">Financial Specialist</p>
                                     <p style="text-align:left"><strong>Nationality:</strong>
                                     <br>Egyptian
                                     <br><strong>Education:</strong>
@@ -620,7 +620,7 @@
                                     <br>- Sr. Audit Director of Dr. Mohammed Al Amari & Co. (Chartered Accountants).
                                     <br>- Financial and administrative director of many companies.
                                     <br>- Certified Public Accountant in the Arab Republic of Egypt.
-                                    <br>- Financial Advisor and Expert at Abdullah Bakodah Financial Advisory for non-securities.</p>
+                                    <br>- Financial Advisor and Specialist at Abdullah Bakodah Financial Advisory for non-securities.</p>
                                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="fa fa-times"></i></button>
                                 </div>
                             </div>
@@ -646,7 +646,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2 class="section-heading">Mahmoud Ahmed Ali</h2>
-                                <p class="section-subheading">Executive Director</p>
+                                <p class="section-subheading">Audit Manager</p>
                                 <p style="text-align:left"><strong>Nationality:</strong>
                                 <br>Egyptian
                                 <br><strong>Education:</strong>
